Manifest/Service/GatewayAPI/DemoApp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - "-text=hello-from-envoy-gateway"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: demo
spec:
  selector:
    app: http-echo
  ports:
    - name: http
      port: 80
      targetPort: 5678
