Manifest/Service/GatewayAPI/HttpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gw
      namespace: demo
  hostnames:
    - "demo.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http-echo
          port: 80
