Manifest/Service/GatewayAPI/NginxExample.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dp
  namespace: hnp
spec:
  replicas: 2
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - item
  template:
    metadata:
      labels:
        app: item
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: hnp
spec:
  selector:
    app: item
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hnp-gw
  namespace: hnp
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: hnp
spec:
  parentRefs:
    - name: hnp-gw
      namespace: hnp
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /nginx
      backendRefs:
        - name: nginx-svc
          port: 80
